tests/error/tracing_errors/generic_function.err
Error: Unsupported (at $FILE:10:0)
   | 
 8 | 
 9 | @guppy.comptime(module)
10 | def test(xs: array[int, n]) -> None:
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
11 |     pass
   | ^^^^^^^^ Generic comptime functions are not supported

Guppy compilation failed due to 1 previous error
